  * Merge patch from upstream CVS (courtesy Ulrich Drepper) to fix
    strfry() crash.  (Closes: #343365)
  * Merge patch from upstream CVS (courtesy Roland McGrath and Anton
    Blanchard) to fix problem with execute permissions on GOT when using
    64kB pages on PowerPC.  (Closes: #344105)
  * Require binutils 2.16.1cvs20051109-1 to ensure that i386 biarch
    linking works properly.

 -- GOTO Masanori <gotom@debian.org>  Tue, 20 Dec 2005 09:51:34 +0900

glibc (2.3.5-9) unstable; urgency=low

  [ Daniel Jacobowitz ]
  * Downgrade priority of amd64 libraries on i386.
  * Move packages from base to libs.

  [ Clint Adams ]
  * Remove sparc64 TLS patch, and disable TLS for sparc64 build
    (Closes: #340835, #341514).
  * Add patch to fix build failure with __bind and other
    socket-related symbols being already defined on
    sparc (Closes: #342755).
  * Add patch from Anton Blanchard to fix build failure with
    __bind and other socket-related symbols being already
    defined on powerpc (Closes: #343571).
  * Replace amd64 sem_trywait patch from Kurt Roeckx's NMU with
    fix from upstream glibc CVS (Closes: #339389).
  * Add patch from Anton Blanchard to fix build failures with
    "__moddi3" and friends being already defined on i386
    and powerpc (Closes: #339415).
  * Bump Standards-Version to 3.6.2 and add myself to Uploaders.

 -- Clint Adams <schizo@debian.org>  Sat, 17 Dec 2005 10:33:38 -0500

glibc (2.3.5-8.1) unstable; urgency=low

  * Non-maintainer upload.
  * Rename sem_trywait to __new_sem_trywait in amd64 nptl code
    so the alias works properly, and it can be build.
    (Closes: #339389)

 -- Kurt Roeckx <kurt@roeckx.be>  Sun, 27 Nov 2005 11:22:03 +0100

glibc (2.3.5-8) unstable; urgency=low

  * Add missing build dependency on libc6-dev-ppc64 on powerpc.
  * Add patch to fix sparc64 TLS build failure, from Aurelien Jarno
    (Closes: #335821).
  * Also restart saslauthd at upgrades, from Philipp Hug (Closes: #334101).