@@ -14,6 +14,8 @@ glibc (2.3.5-10) unstable; urgency=low
     64kB pages on PowerPC.  (Closes: #344105)
   * Require binutils 2.16.1cvs20051109-1 to ensure that i386 biarch
     linking works properly.
+  * debian/script.in/kernelcheck.sh: Require kernel >= 2.4.0 on arm to
+    avoid llseek problem.  (Closes: #324795)
 
  -- GOTO Masanori <gotom@debian.org>  Tue, 20 Dec 2005 09:51:34 +0900
 
